[gd_scene load_steps=4 format=3 uid="uid://coumitoylgnp8"]

[ext_resource type="Script" path="res://Scripts/pause_screen.gd" id="1_foau2"]
[ext_resource type="Texture2D" uid="uid://ytjjunj2wv8f" path="res://Assets/PauseScreen.png" id="2_645e0"]
[ext_resource type="PackedScene" uid="uid://cwr5r4rkw78pn" path="res://Scenes/settingsMenu.tscn" id="3_vskhk"]

[node name="PauseScreen" type="Control"]
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_foau2")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
offset_right = 1152.0
offset_bottom = 648.0

[node name="Background" type="TextureRect" parent="Background"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.5
offset_top = -276.5
offset_right = 319.5
offset_bottom = 276.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_645e0")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -167.0
offset_top = -56.0
offset_right = 168.0
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Resume" type="Button" parent="Background/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "resume"

[node name="Mainmenu" type="Button" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Main Menu"

[node name="Settings" type="Button" parent="Background/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "settings"

[node name="Settings" parent="." instance=ExtResource("3_vskhk")]

[node name="CheckButton" type="CheckButton" parent="Settings"]
visible = false
texture_filter = 1
anchors_preset = -1
anchor_left = 0.167535
anchor_top = 0.756173
anchor_right = 0.288194
anchor_bottom = 0.804013
text = "mute music"
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Background/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Mainmenu" to="." method="_on_mainmenu_pressed"]
[connection signal="pressed" from="Background/VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="toggled" from="Settings/CheckButton" to="." method="_on_check_button_toggled"]
